--- a/styles/style.css
+++ b/styles/style.css
@@ -53,15 +53,22 @@
 .section-1-title{
     font-size: 40px;
     color: #151414;
-    
+    margin-bottom: 30px;
 }
 .section-1-description{
     font-size:16px ;
-    color:#444343;;
+    color:#444343;
+    margin-bottom: 16px;
 }
 .section-1-li{
     font-size:16px ;
     color:#444343;
+    list-style: none;
+}
+.section-1-icon{
+    color: rgba(22, 216, 135, 100%);
 }
 /* section-1 ends */
+
+
 /* main ends here */
