--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,34 @@
     color: rgba(22, 216, 135, 100%);
 }
 /* section-1 ends */
-
+/* section-2 starts */
+.section-2 h3{
+    text-align: center;
+    font-size: 40px;
+    margin-top: 130px;
+    margin-bottom: 50px;
+}
+.section-2-cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 86px;
+    text-align: center;
+    
+}
+.section-2  img{
+    margin-bottom: 24px;
+}
+.section-2 h4{
+    color: #151414;;
+    font-size: 30px;
+    margin-bottom: 16px;
+}
+.section-2 p{
+    color: #737272;
+    font-size: 25px;
+    
+}
+/* section-2 ends  */
 
 /* main ends here */
