--- a/styles/style.css
+++ b/styles/style.css
@@ -1,102 +1,143 @@
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
 /* header section styles starts from here */
-.header{
-    background-image: url('../images/banner/banner2.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 800px ;
-    width: 100%;
-    
+.header {
+  background-image: url("../images/banner/banner2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 800px;
+  width: 100%;
 }
-.banner{
-    padding: 200px 50px;
-    text-align: center;
-    margin-left: 550px;
-    
+.banner {
+  padding: 200px 50px;
+  text-align: center;
+  margin-left: 550px;
 }
-.banner-title{
-    font-size: 65px;
-    font-weight: 700px;
-    color: #151414;
-    margin-bottom: 24px;
+.banner-title {
+  font-size: 65px;
+  font-weight: 700px;
+  color: #151414;
+  margin-bottom: 24px;
 }
-.banner-description{
-    font-weight: 400px;
-    font-size: 16px;
-    color: #444343;
-    margin-bottom: 32px ;
+.banner-description {
+  font-weight: 400px;
+  font-size: 16px;
+  color: #444343;
+  margin-bottom: 32px;
 }
-.btn-primary{
-    background-color: #F15B22;
-    font-size:  20px;
-    border: 0;
-    color: #FFFFFF;
-    border-radius: 5px;
-    padding: 20px 25px;
+.btn-primary {
+  background-color: #f15b22;
+  font-size: 20px;
+  border: 0;
+  color: #ffffff;
+  border-radius: 5px;
+  padding: 20px 25px;
 }
 /* header section styles ends here */
 
 /* main starts from here */
 /* section-1 start */
-.section-1{
-    display: flex;
-    margin-top: 130px;
-    align-items: center;
-    justify-content: center;
-    gap: 80px;
+.section-1 {
+  display: flex;
+  margin-top: 130px;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
 }
-.section-1-content{
-    
+.section-1-content {
 }
-.section-1-title{
-    font-size: 40px;
-    color: #151414;
-    margin-bottom: 30px;
+.section-1-title {
+  font-size: 40px;
+  color: #151414;
+  margin-bottom: 30px;
 }
-.section-1-description{
-    font-size:16px ;
-    color:#444343;
-    margin-bottom: 16px;
+.section-1-description {
+  font-size: 16px;
+  color: #444343;
+  margin-bottom: 16px;
 }
-.section-1-li{
-    font-size:16px ;
-    color:#444343;
-    list-style: none;
+.section-1-li {
+  font-size: 16px;
+  color: #444343;
+  list-style: none;
 }
-.section-1-icon{
-    color: rgba(22, 216, 135, 100%);
+.section-1-icon {
+  color: rgba(22, 216, 135, 100%);
 }
 /* section-1 ends */
 /* section-2 starts */
-.section-2 h3{
-    text-align: center;
-    font-size: 40px;
-    margin-top: 130px;
-    margin-bottom: 50px;
+.section-2 h3 {
+  text-align: center;
+  font-size: 40px;
+  margin-top: 130px;
+  margin-bottom: 50px;
 }
-.section-2-cart{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 86px;
-    text-align: center;
-    
+.section-2-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 86px;
+  text-align: center;
 }
-.section-2  img{
-    margin-bottom: 24px;
+.section-2 img {
+  margin-bottom: 24px;
 }
-.section-2 h4{
-    color: #151414;;
-    font-size: 30px;
-    margin-bottom: 16px;
+.section-2 h4 {
+  color: #151414;
+  font-size: 30px;
+  margin-bottom: 16px;
 }
-.section-2 p{
-    color: #737272;
-    font-size: 25px;
-    
+.section-2 p {
+  color: #737272;
+  font-size: 25px;
 }
 /* section-2 ends  */
 
 /* main ends here */
+
+/* footer starts here */
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #151414;
+  color: #ffffff;
+  gap: 300px;
+  padding: 100px 150px ;
+  
+  
+}
+.footer-content-1 h3 {
+  margin-bottom: 16px;
+  font-size: 45px;
+  
+}
+.footer-img {
+  margin-top: 32px;
+}
+
+
+.footer-content-2 h4 {
+    font-size: 25px;
+    
+}
+.footer-content-2 input[type=email]{
+    padding: 22px 158px 22px 22px;  
+    margin-top: 32px;
+    font-size: 18px;
+    font-weight: 400;
+    color: #151414;
+    
+}
+.footer-content-2 input[type=button]{
+    padding: 20px 36px;
+    background-color: rgba(255, 255, 255, 1);  
+    color: rgba(241, 91, 34, 1);
+    border-radius: 5px;
+    border: 0;
+    margin-top: 16px;
+    font-weight: 600;
+}
+
+/* footer ends here */
