--- a/styles/style.css
+++ b/styles/style.css
@@ -99,45 +99,42 @@
 /* footer starts here */
 footer {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background-color: #151414;
   color: #ffffff;
-  gap: 300px;
-  padding: 100px 150px ;
-  
-  
+  gap: 400px;
+  padding: 100px 150px;
+}
+.footer-content-1 {
+  padding-right: 100px;
 }
 .footer-content-1 h3 {
   margin-bottom: 16px;
   font-size: 45px;
-  
 }
 .footer-img {
   margin-top: 32px;
 }
 
-
 .footer-content-2 h4 {
-    font-size: 25px;
-    
+  font-size: 25px;
 }
-.footer-content-2 input[type=email]{
-    padding: 22px 158px 22px 22px;  
-    margin-top: 32px;
-    font-size: 18px;
-    font-weight: 400;
-    color: #151414;
-    
+.footer-content-2 input[type="email"] {
+  padding: 22px 20px 22px 22px;
+  margin-top: 32px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #151414;
 }
-.footer-content-2 input[type=button]{
-    padding: 20px 36px;
-    background-color: rgba(255, 255, 255, 1);  
-    color: rgba(241, 91, 34, 1);
-    border-radius: 5px;
-    border: 0;
-    margin-top: 16px;
-    font-weight: 600;
+.footer-content-2 input[type="button"] {
+  padding: 20px 36px;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(241, 91, 34, 1);
+  border-radius: 5px;
+  border: 0;
+  margin-top: 16px;
+  font-weight: 600;
 }
 
 /* footer ends here */
