--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,8 @@
 }
 .banner {
   padding: 200px 50px;
-  text-align: center;
-  margin-left: 550px;
+  text-align: right;
+  margin-right: 230px;
 }
 .banner-title {
   font-size: 65px;
@@ -37,36 +37,48 @@
 /* header section styles ends here */
 
 /* main starts from here */
+main {
+  margin-left: 230px;
+  margin-right: 230px;
+}
 /* section-1 start */
 .section-1 {
   display: flex;
   margin-top: 130px;
   align-items: center;
-  justify-content: center;
-  gap: 80px;
+  justify-content: center ;
+  gap: 70px;
 }
 .section-1-content {
+  
 }
 .section-1-title {
-  font-size: 40px;
+  font-size: 25px;
   color: #151414;
   margin-bottom: 30px;
+  font-weight: 700;
 }
 .section-1-description {
   font-size: 16px;
   color: #444343;
   margin-bottom: 16px;
+  padding:0 ;
 }
 .section-1-li {
   font-size: 16px;
   color: #444343;
   list-style: none;
+  text-align: left;
+  padding: 0;
 }
 .section-1-icon {
   color: rgba(22, 216, 135, 100%);
 }
 /* section-1 ends */
 /* section-2 starts */
+.section-2 {
+  margin-bottom: 125px;
+}
 .section-2 h3 {
   text-align: center;
   font-size: 40px;
@@ -75,24 +87,58 @@
 }
 .section-2-cart {
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 86px;
   text-align: center;
+  
 }
 .section-2 img {
   margin-bottom: 24px;
+  
 }
 .section-2 h4 {
   color: #151414;
-  font-size: 30px;
+  font-size: 20px;
   margin-bottom: 16px;
+  font-weight: 700;
 }
 .section-2 p {
   color: #737272;
-  font-size: 25px;
+  font-size: 15px;
+  font-weight: 500;
 }
 /* section-2 ends  */
+
+/* section-3 starts */
+.section-3 {
+  background-image: url("../images/watch.png"), url("../images/gradient2.png");
+  background-blend-mode: soft-light;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 300px;
+  color: #ffffff;
+}
+.section-3-content{
+  padding-top:60px;
+  padding-left: 64px;
+  padding-bottom: 60px;
+  vertical-align: middle;
+}
+.section-3 h3 {
+  font-size: 20px;
+  font-weight: 700; 
+  align-items: center;
+  margin-bottom: 10px;
+}
+.section-3 input[type="button"] {
+  padding: 10px 16px;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(241, 91, 34, 1);
+  border-radius: 5px;
+  border: 0;
+  margin-top: 16px;
+  font-weight: 600;
+}
+/* section-3 ends */
 
 /* main ends here */
 
@@ -105,9 +151,10 @@ footer {
   color: #ffffff;
   gap: 400px;
   padding: 100px 150px;
+  margin-top: 145px;
 }
 .footer-content-1 {
-  padding-right: 100px;
+  padding: 0;
 }
 .footer-content-1 h3 {
   margin-bottom: 16px;
@@ -125,7 +172,9 @@ footer {
   margin-top: 32px;
   font-size: 18px;
   font-weight: 400;
-  color: #151414;
+  background-color: #151414;
+  border: 1px solid #FFFFFF;
+  border-radius:5px ;
 }
 .footer-content-2 input[type="button"] {
   padding: 20px 36px;
